complete user and login tests

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up</h1>
+<h1>Sign Up!</h1>
 
 <form action="<%= users_url %>" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
@@ -11,5 +11,5 @@
   <input type="password" name="user[password]" value="" id="user_password">
   <br>
 
-  <input type="submit" value="Sign Up">
+  <input type="submit" value="Sign Up!">
 </form>
