--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <% if signed_in? %>
+    <%= button_to "Sign Out", session_url, method: :delete %>
+    <%= link_to "#{ current_user.username }", user_url(current_user) %>
+  <% else %>
+    <%= link_to "Log In", new_session_url %>
+    <%= link_to "Sign Up", new_user_url %>
+  <% end %>
+
 <%= yield %>
 
 </body>
