--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -2,3 +2,19 @@
 
 <br>
 <%= link_to "All Goals", goals_url %>
+
+<% @goal.comments.each do |comment| %>
+  <%= comment.body %>
+<% end %>
+
+<label for="comment_form"><h2>Add Comment</h2></label>
+
+<form id="comment_form" action="<%= comments_url %>" method="post">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
+  <label for="comment_body">Comment</label>
+  <textarea name="comment[body]"></textarea>
+
+  <input type="submit" value="Submit Comment">
+
+</form>
